[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/menu/ConfigMenu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/fonts/Extrude.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[node name="ConfigMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.282353, 0.0941176, 0.0941176, 1 )

[node name="Root" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="SpaceContents" type="Control" parent="Root"]
margin_right = 1024.0
margin_bottom = 516.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContents" type="MarginContainer" parent="Root"]
margin_top = 520.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 32
custom_constants/margin_top = 16
custom_constants/margin_left = 32
custom_constants/margin_bottom = 16

[node name="Contents" type="HBoxContainer" parent="Root/MarginContents"]
margin_left = 32.0
margin_top = 16.0
margin_right = 992.0
margin_bottom = 64.0
custom_constants/separation = 20

[node name="Header" type="Label" parent="Root/MarginContents/Contents"]
margin_right = 213.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="AudioOption" type="Label" parent="Root/MarginContents/Contents"]
margin_left = 233.0
margin_top = 6.0
margin_right = 293.0
margin_bottom = 41.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
text = "Audio"

[node name="GraphicsOption" type="Label" parent="Root/MarginContents/Contents"]
margin_left = 313.0
margin_top = 6.0
margin_right = 409.0
margin_bottom = 41.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
text = "Graphics"

[node name="BackOption" type="Label" parent="Root/MarginContents/Contents"]
margin_left = 429.0
margin_top = 6.0
margin_right = 477.0
margin_bottom = 41.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
text = "Back"

[connection signal="gui_input" from="Root/MarginContents/Contents/AudioOption" to="." method="_on_AudioOption_gui_input"]
[connection signal="mouse_entered" from="Root/MarginContents/Contents/AudioOption" to="." method="_on_AudioOption_mouse_entered"]
[connection signal="mouse_exited" from="Root/MarginContents/Contents/AudioOption" to="." method="_on_AudioOption_mouse_exited"]
[connection signal="gui_input" from="Root/MarginContents/Contents/GraphicsOption" to="." method="_on_GraphicsOption_gui_input"]
[connection signal="mouse_entered" from="Root/MarginContents/Contents/GraphicsOption" to="." method="_on_GraphicsOption_mouse_entered"]
[connection signal="mouse_exited" from="Root/MarginContents/Contents/GraphicsOption" to="." method="_on_GraphicsOption_mouse_exited"]
[connection signal="gui_input" from="Root/MarginContents/Contents/BackOption" to="." method="_on_BackOption_gui_input"]
[connection signal="mouse_entered" from="Root/MarginContents/Contents/BackOption" to="." method="_on_BackOption_mouse_entered"]
[connection signal="mouse_exited" from="Root/MarginContents/Contents/BackOption" to="." method="_on_BackOption_mouse_exited"]
